# temppinns

./: .gitignore  README.md  pyproject.toml
#/: pyvenv.cfg
#/Scripts/: activate  activate.bat
Create/: pyvenv.cfg
Create/Scripts/: activate  activate.bat
a/: pyvenv.cfg
a/Scripts/: activate  activate.bat
environment/: pyvenv.cfg
src/cooling/: regularisation_ex.ipynb  temp_pred.ipynb
virtual/: pyvenv.cfg
virtual/Scripts/: activate  activate.bat
